frontend/test/should_fail/index_edge_missing_where_index_expected.grg
rule i(ref s:set<Edge>) {
	if{ edgesFromIndex(s).size() > 0; }
	
	modify {
	}
}
